--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <div class="news-tips__list">
                     <div class="news-tips__item">
                         <picture>
-                            <img src="img/news/item1_1x.png" alt="">
+                            <img class="news-tips__item__img" src="img/news/item1_1x.png" alt="">
                         </picture>
                         <div class="item__suptitle">
                             <p class="item__design-type">UI / UX Design</p>
@@ -202,7 +202,7 @@
                     </div>
                     <div class="news-tips__item">
                         <picture>
-                            <img src="img/news/item2_1x.png" alt="">
+                            <img src="img/news/item2_1x.png" class="news-tips__item__img" alt="">
                         </picture>
                         <div class="item__suptitle">
                             <p class="item__design-type">UI / UX Design</p>
@@ -219,7 +219,7 @@
                     </div>
                     <div class="news-tips__item">
                         <picture>
-                            <img src="img/news/item3_1x.png" alt="">
+                            <img src="img/news/item3_1x.png" class="news-tips__item__img" alt="">
                         </picture>
                         <div class="item__suptitle">
                             <p class="item__design-type">UI / UX Design</p>
@@ -255,9 +255,9 @@
             <div class="footer__content">
                 <div class="container footer__content__container">
                     <div class="footer__communication">
-                        <img class="company__logo" src="img/header/logo.svg" alt="">
+                        <img class="company__logo footer__logo" src="img/header/logo.svg" alt="">
                         <p class="communication__address">
-                            10/B, House# 32, Dhaka Uddan <br>
+                            10/B, House# 32, Dhaka Uddan
                             Mohammadpur, Dhaka, Bangladesh
                         </p>
                         <div class="communication__social-networks">
