--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
                     location to a predefined destination.</p>
                 <div class="advantages__list">
                     <div class="advantages__item">
-                        <img class="advantage__logo" src="img/advantages/item1.svg">
+                        <svg class="advantage__logo" xmlns="http://www.w3.org/2000/svg" width="72" height="71" viewBox="0 0 72 71">
+                            <use href="./img/advantages/advantages__sprite.svg#item1"></use>
+                        </svg>
                         <div class="advantage__info">
                             <p class="advantage__title">
                                 Industry-leading tech
@@ -77,7 +79,9 @@
                         </div>
                     </div>
                     <div class="advantages__item">
-                        <img class="advantage__logo" src="img/advantages/item2.svg">
+                        <svg class="advantage__logo" xmlns="http://www.w3.org/2000/svg" width="92" height="71" viewBox="0 0 92 71">
+                            <use href="./img/advantages/advantages__sprite.svg#item2"></use>
+                        </svg>
                         <div class="advantage__info">
                             <p class="advantage__title">
                                 Nationwide coverage
@@ -88,7 +92,9 @@
                         </div>
                     </div>
                     <div class="advantages__item">
-                        <img class="advantage__logo" src="img/advantages/item3.svg">
+                        <svg class="advantage__logo" xmlns="http://www.w3.org/2000/svg" width="111" height="71" viewBox="0 0 111 71">
+                            <use href="./img/advantages/advantages__sprite.svg#item3"></use>
+                        </svg>
                         <div class="advantage__info">
                             <p class="advantage__title">
                                 Fastest Delivery
@@ -99,7 +105,9 @@
                         </div>
                     </div>
                     <div class="advantages__item">
-                        <img class="advantage__logo" src="img/advantages/item4.svg">
+                        <svg class="advantage__logo" xmlns="http://www.w3.org/2000/svg" width="71" height="70" viewBox="0 0 71 70">
+                            <use href="./img/advantages/advantages__sprite.svg#item4"></use>
+                        </svg>
                         <div class="advantage__info">
                             <p class="advantage__title">
                                 Next day payment
@@ -110,7 +118,9 @@
                         </div>
                     </div>
                     <div class="advantages__item">
-                        <img class="advantage__logo" src="img/advantages/item5.svg">
+                        <svg class="advantage__logo" xmlns="http://www.w3.org/2000/svg" width="92" height="70" viewBox="0 0 92 70">
+                            <use href="./img/advantages/advantages__sprite.svg#item5"></use>
+                        </svg>
                         <div class="advantage__info">
                             <p class="advantage__title">
                                 Best COD rates
@@ -121,7 +131,9 @@
                         </div>
                     </div>
                     <div class="advantages__item">
-                        <img class="advantage__logo" src="img/advantages/item6.svg">
+                        <svg class="advantage__logo" xmlns="http://www.w3.org/2000/svg" width="65" height="72" viewBox="0 0 65 72">
+                            <use href="./img/advantages/advantages__sprite.svg#item6"></use>
+                        </svg>
                         <div class="advantage__info">
                             <p class="advantage__title">
                                 Secure handling
@@ -132,7 +144,9 @@
                         </div>
                     </div>
                     <div class="advantages__item">
-                        <img class="advantage__logo" src="img/advantages/item7.svg">
+                        <svg class="advantage__logo" xmlns="http://www.w3.org/2000/svg" width="70" height="71" viewBox="0 0 70 71">
+                            <use href="./img/advantages/advantages__sprite.svg#item7"></use>
+                        </svg>
                         <div class="advantage__info">
                             <p class="advantage__title">
                                 Product insurance
@@ -143,7 +157,9 @@
                         </div>
                     </div>
                     <div class="advantages__item">
-                        <img class="advantage__logo" src="img/advantages/item8.svg">
+                        <svg class="advantage__logo" xmlns="http://www.w3.org/2000/svg" width="72" height="73" viewBox="0 0 72 73">
+                            <use href="./img/advantages/advantages__sprite.svg#item8"></use>
+                        </svg>
                         <div class="advantage__info">
                             <p class="advantage__title">
                                 Verified Products
@@ -154,7 +170,9 @@
                         </div>
                     </div>
                     <div class="advantages__item">
-                        <img class="advantage__logo" src="img/advantages/item1.svg">
+                        <svg class="advantage__logo" xmlns="http://www.w3.org/2000/svg" width="70" height="71" viewBox="0 0 70 71">
+                            <use href="./img/advantages/advantages__sprite.svg#item7"></use>
+                        </svg>
                         <div class="advantage__info">
                             <p class="advantage__title">
                                 Realtime Monitoring
@@ -213,14 +231,14 @@
                             <img src="img/news/item2_1x.png" class="news-tips__item__img" alt="">
                         </picture>
                         <div class="item__suptitle">
-                            <p class="item__design-type">UI / UX Design</p>
+                            <p class="item__design-type">Apps Design</p>
                             <p class="item__view">
                                 <img src="img/news/eye.svg" alt="eye">
-                                <span>12450</span>
+                                <span>2953</span>
                             </p>
                         </div>
-                        <p class="item__title">Our UX studio digitally transforms business through design</p>
-                        <p class="item__text">All of these problems are addressable through UX and gamification in particular. That’s not to say that it’s a cure-all.</p>
+                        <p class="item__title">Your customer do need comprehensive course to learn how to use your app.</p>
+                        <p class="item__text">Let’s be honest. Finance isn’t exactly pinnacle fun.Online companies introduced gamification elements to their products reach up to a 700% increase in conversion rates.</p>
                         <a href="" class="item__learn-more">
                             Learn More <img src="img/news/arrow.svg" alt="arrow" class="item__arrow">
                         </a>
@@ -230,14 +248,14 @@
                             <img src="img/news/item3_1x.png" class="news-tips__item__img" alt="">
                         </picture>
                         <div class="item__suptitle">
-                            <p class="item__design-type">UI / UX Design</p>
+                            <p class="item__design-type">Product Experience</p>
                             <p class="item__view">
                                 <img src="img/news/eye.svg" alt="eye">
-                                <span>12450</span>
+                                <span>7980</span>
                             </p>
                         </div>
-                        <p class="item__title">Our UX studio digitally transforms business through design</p>
-                        <p class="item__text">All of these problems are addressable through UX and gamification in particular. That’s not to say that it’s a cure-all.</p>
+                        <p class="item__title">Scale your startup through exceptional product experience</p>
+                        <p class="item__text">Our UX design agency creates solutions to address product usability conversion rates an the ever-present challenges of user-retention & engagement.</p>
                         <a href="" class="item__learn-more">
                             Learn More <img src="img/news/arrow.svg" alt="arrow" class="item__arrow">
                         </a>
@@ -249,32 +267,32 @@
             <div class="container clients__container">
                 <p class="clients__title">Our Clients</p>
                 <div class="clients__list">
-                    <a href="https://www.google.com" class="clients__item">
+                    <a href="#" class="clients__item">
                         <svg width="120" height="40" viewBox="0 0 120 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <use href="./img/clients/clients__sprite.svg#google"></use>
                         </svg>
                     </a>
-                    <a href="https://www.microsoft.com" class="clients__item">
+                    <a href="#" class="clients__item">
                         <svg width="141" height="30" viewBox="0 0 141 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <use href="./img/clients/clients__sprite.svg#microsoft"></use>
                         </svg>
                     </a>
-                    <a href="https://www.flickr.com" class="clients__item">
+                    <a href="#" class="clients__item">
                         <svg width="100" height="30" viewBox="0 0 100 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <use href="./img/clients/clients__sprite.svg#flickr"></use>
                         </svg>
                     </a>
-                    <a href="https://www.slack.com" class="clients__item">
+                    <a href="#" class="clients__item">
                         <svg width="119" height="30" viewBox="0 0 119 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <use href="./img/clients/clients__sprite.svg#slack"></use>
                         </svg>
                     </a>
-                    <a href="https://www.syngenta.com" class="clients__item">
+                    <a href="#" class="clients__item">
                         <svg width="134" height="40" viewBox="0 0 134 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <use href="./img/clients/clients__sprite.svg#syngenta"></use>
                         </svg>
                     </a>
-                    <a href="https://www.merck.com" class="clients__item">
+                    <a href="#" class="clients__item">
                         <svg width="138" height="40" viewBox="0 0 138 40" xmlns="http://www.w3.org/2000/svg">
                             <use href="./img/clients/clients__sprite.svg#merck"></use>
                         </svg>
@@ -294,34 +312,47 @@
                             Mohammadpur, Dhaka, Bangladesh
                         </p>
                         <div class="communication__social-networks">
-                            <svg xmlns="http://www.w3.org/2000/svg">
-                                <use href="./img/social__networks/socials__sprite.svg#facebook"></use>
-                            </svg>
-                            <svg xmlns="http://www.w3.org/2000/svg">
-                                <use href="./img/social__networks/socials__sprite.svg#twitter"></use>
-                            </svg>
-                            <svg xmlns="http://www.w3.org/2000/svg">
-                                <use href="./img/social__networks/socials__sprite.svg#pincerest"></use>
-                            </svg>
-                            <svg xmlns="http://www.w3.org/2000/svg">
-                                <use href="./img/social__networks/socials__sprite.svg#instagram"></use>
-                            </svg>
+                            <a href="#" class="social-networks__item">
+                                <svg width="32" height="33" viewBox="0 0 32 33" xmlns="http://www.w3.org/2000/svg" class="icon">
+                                    <use href="./img/social__networks/socials__sprite.svg#facebook"></use>
+                                </svg>
+                            </a>
+                            <a href="#" class="social-networks__item">
+                                <svg width="33" height="33" viewBox="0 0 33 33" xmlns="http://www.w3.org/2000/svg" class="icon">
+                                    <use href="./img/social__networks/socials__sprite.svg#linkedIn"></use>
+                                </svg>
+                            </a>
+                            <a href="#" class="social-networks__item">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33" class="icon">
+                                    <use href="./img/social__networks/socials__sprite.svg#twitter"></use>
+                                </svg>
+                            </a>
+                            <a href="#" class="social-networks__item">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33" class="icon">
+                                    <use href="./img/social__networks/socials__sprite.svg#pincerest"></use>
+                                </svg>
+                            </a>
+                            <a href="#" class="social-networks__item">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33" class="icon">
+                                    <use href="./img/social__networks/socials__sprite.svg#instagram"></use>
+                                </svg>
+                            </a>
                         </div>
                     </div>
                     <div class="footer__important-links">
                         <div class="important-links__title">Important links</div>
                         <ul class="important-links__list">
                             <li class="important-links__item">
-                                <a href="" class="important-links__item-link">FAQs</a>
+                                <a href="#" class="important-links__item-link">FAQs</a>
                             </li>
                             <li class="important-links__item">
-                                <a href="" class="important-links__item-link"></a>
+                                <a href="#" class="important-links__item-link">Blogs</a>
                             </li>
                             <li class="important-links__item">
-                                <a href="" class="important-links__item-link">Privacy Policy</a>
+                                <a href="#" class="important-links__item-link">Privacy Policy</a>
                             </li>
                             <li class="important-links__item">
-                                <a href="" class="important-links__item-link">Trims & Conditions</a>
+                                <a href="#" class="important-links__item-link">Trims & Conditions</a>
                             </li>
                         </ul>
                     </div>
